--- a/EmployeeManagement.Test/EmployeeManagement.Test.csproj
+++ b/EmployeeManagement.Test/EmployeeManagement.Test.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\EmployeeManagement\EmployeeManagement.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
