--- a/EmployeeManagement.Test/EmployeeManagement.Test.csproj
+++ b/EmployeeManagement.Test/EmployeeManagement.Test.csproj
@@ -30,4 +30,10 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\EmployeeServiceTestData.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
